# autocvd

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
src/autocvd/: __init__.py  main.py  nvidia_smi_calls.py  utils.py
tests/: test_autocvd.py
