[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocvd"
version = "0.0.1"
author = "Jonas Ricker"
description = "Automatically set CUDA_VISIBLE_DEVICES"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jonasricker/autocvd"
"Bug Tracker" = "https://github.com/jonasricker/autocvd/issues"

[project.scripts]
autocvd = "autocvd.main:cli"

[tool.ruff]
target-version = "py38"
select = ["E", "F", "I", "N", "D"]
ignore = ["D203", "D213"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[tool.black]
preview = true
