[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocvd"
version = "0.2.0"
author = "Jonas Ricker"
description = "A tool for setting CUDA_VISIBLE_DEVICES based on utilization"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/jonasricker/autocvd"
"Bug Tracker" = "https://github.com/jonasricker/autocvd/issues"

[project.scripts]
autocvd = "autocvd.main:cli"

[tool.ruff]
target-version = "py37"
select = ["E", "F", "I", "N", "D"]
ignore = ["D203", "D213"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[tool.black]
preview = true
